[package]
name = "GeoIP"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.0", features = ["full", "macros"] }  # Added macros feature
maxminddb = "0.25.0"
serde_json = "1.0.114"
reqwest = { version = "0.11.27", features = ["json"] }
flate2 = "1.0.28"
tar = "0.4.40"
tokio-cron-scheduler = "0.13.0"
dotenvy = "0.15.7"
env_logger = "0.11.3"
log = "0.4.21"